Bug 112076 - UI: empty (grey) start center after closing document
Summary: UI: empty (grey) start center after closing document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All macOS (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2017-08-29 06:53 UTC by Telesto
Modified: 2017-10-18 16:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (40.92 KB, application/vnd.oasis.opendocument.text)
2017-08-29 06:54 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-08-29 06:53:54 UTC
Description:
Empty (grey) start center after closing document

Steps to Reproduce:
1. Open the attached file
2. Close the document
3. Restore the start center by click on the LibO icon in the launchpad -> grey screen
[4. Menu Libreoffice -> About -> not possible to select the content]

Actual Results:  
Empty grey screen

Expected Results:
Start center should show


Reproducible: Always

User Profile Reset: No

Additional Info:
Version: 6.0.0.0.alpha0+
Build ID: 2b78b9feab9521e614b9edae17709cb6e2001292
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2017-08-25_05:47:15
Locale: nl-NL (nl_NL.UTF-8); Calc: group


User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/603.3.8 (KHTML, like Gecko) Version/10.1.2 Safari/603.3.8
Comment 1 Telesto 2017-08-29 06:54:20 UTC
Created attachment 135838 [details]
Example file
Comment 2 Jean-Baptiste Faure 2017-08-29 07:10:32 UTC
Not reproducible for me with my own build of master under Ubuntu. If confirmed probably a MacOS only bug.

Best regards. JBF
Comment 3 Alex Thurgood 2017-09-04 08:08:49 UTC
Confirming with

Version: 6.0.0.0.alpha0+
Build ID: ae3ba018bfe066854fd787e2938441e4cc1316e1
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
Locale: fr-FR (fr_FR.UTF-8); Calc: group
Comment 4 Alex Thurgood 2017-09-04 08:11:39 UTC
A side effect of this problem can be seen when calling up the About screen. With the grey "StartCenter" window in focus, activating the About dialog somehow manages to deactivate the cursor select function - it is impossible to drag the cursor across the text of the About dialog to select it with the mouse.
Comment 5 Telesto 2017-09-22 15:37:49 UTC
Repro with:
Version: 6.0.0.0.alpha0+
Build ID: f95e7ef38e0bf79fa9662bfd50de612d50ef71de
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2017-09-22_12:57:48
Locale: nl-NL (nl_NL.UTF-8); Calc: group

@Jan-Marek : any chance this is related to your recent changes?
Comment 6 Telesto 2017-10-13 18:17:08 UTC
Repro with:
Version: 6.0.0.0.alpha0+
Build ID: 4d94541a7b88b76d856e30dba7f8a3de48260eda
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2017-10-08_02:51:19
Locale: nl-NL (nl_NL.UTF-8); Calc: group
Comment 7 Jan-Marek Glogowski 2017-10-13 23:55:15 UTC
I guess I reproduced the right bug, which was kind of hard. I tied open via open dialog, via dragging, via recent files, closing via menu, Ctrl+W, close button on the window frame... no problems.

"My bug" just happens, when you close a document window via the window decorations (AKA the red x) while LO is busy. All other close methods didn't trigger the bug for me. Actually there is a good chance, that LO stops processing its own events on every window close. So can someone of you QA guys just verify it for me?

Since it's just LOs own task handling, some stuff still works.

And it has nothing to do with Launchpad, where I really had problems to get my local build registered. In the end a symlink ~/Applications/LibreOfficeDev.app did the trick.

The fix is in Gerrit (https://gerrit.libreoffice.org/43381), but needs some proper documentation, before I'll push it next week. Just if you want to test on the weekend.
Comment 8 Telesto 2017-10-14 07:03:06 UTC
Sorry, didn't check initial steps (not reproducible anymore), so I didn't notice that I reproduced it a bit differently last time.

1. Open the attached file
2. Save the file as
3. Close the document (red x)
4. 'Restore' the start center by click on the LibO icon in the launchpad -> grey screen

Side-effects of comment 4 will happen too.

-> Not sure what you mean with: close a document window via the window decorations (AKA the red x) "while LO is busy". LibO isn't responding to the red cross while LibO busy (saving/opening/change formatting)
Comment 9 Julien Nabet 2017-10-14 17:48:14 UTC
With last Telesto's comment, on Macos 10.12 + master sources updated today, I could reproduce this.

I noticed this kind of log:
warn:vcl.schedule:81274:16767856:vcl/source/app/svapp.cxx:515: Unprocessed Idle: 0x7f866287f448 sfx::SfxItemDisruptor_Impl m_Idle

I'm gonna test Jan-Marek's patch now
Comment 10 Julien Nabet 2017-10-14 18:06:15 UTC
By fixing the patch with:
diff --git a/vcl/inc/osx/saltimer.h b/vcl/inc/osx/saltimer.h
index c860ad5cbdda..d8230dd07c87 100644
--- a/vcl/inc/osx/saltimer.h
+++ b/vcl/inc/osx/saltimer.h
@@ -58,7 +58,7 @@ public:
     void handleStartTimerEvent( NSEvent* pEvent );
     void handleDispatchTimerEvent( NSEvent* pEvent );
     void handleTimerElapsed();
-    void handleWindowShouldClose();
+    void handleWindowWillClose();
 
     bool IsTimerElapsed() const;
 };

I don't reproduce this indeed.
Comment 11 Telesto 2017-10-14 18:12:05 UTC
And a second correction. I meant Dock, instead of launchpad (still not into the Apple vocabulary). Restore LibO from the Dock

@Julien
Is there some tutorial how to merge or revert LibO commits with git?
Comment 12 Julien Nabet 2017-10-14 18:17:44 UTC
(In reply to Telesto from comment #11)
> And a second correction. I meant Dock, instead of launchpad (still not into
> the Apple vocabulary). Restore LibO from the Dock
> 
> @Julien
> Is there some tutorial how to merge or revert LibO commits with git?

About merging 2 patches, I don't know but to revert a commit, just do:
git revert <patch>
then submit on gerrit the revert
Comment 13 Commit Notification 2017-10-16 14:05:56 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c69c1ee9d1305c284be48a7a973810da16c15541

tdf#112076 OSX post timeout after shouldCloseWindow

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.